--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="toggle_open">打开</string>
     <string name="toggle_close">关闭</string>
+    <string name="test_text">hello,everyone ,i am here to show you the miracle what happed in my life.hello,everyone ,i am here to show you the miracle what happed in my life.</string>
 </resources>
